# pipe2moq

./: Cargo.toml  README.md  config.toml  measure_e2e_latency.sh  monitor_sink.sh  package.json  test_latency.sh  test_pipeline.sh
.beads/: issues.jsonl
doc/: PROMPT-aio.md
doc/discovery/: global-target-time.md  timestamps.md
src/: lib.rs  main.rs
