[package]
name = "pipe2moq"
version = "0.1.0"
edition = "2024"

[dependencies]
# GStreamer
gstreamer = "0.23"
gstreamer-app = "0.23"
gstreamer-audio = "0.23"

# MoQ
moq-native = "0.12"
hang = "0.1"

# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
anyhow = "1"
thiserror = "2"

# Configuration
figment = { version = "0.10", features = ["toml", "env"] }

# Utilities
bytes = "1"
url = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
